apps/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: uptime-kuma
    app.kubernetes.io/part-of: uptime-kuma
spec:
  type: ClusterIP
  clusterIP: 10.43.100.10
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    app.kubernetes.io/name: uptime-kuma
